--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "first-react",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://hanabasiony.github.io/portfolio2",
+  "homepage": "https://hanabasiony.github.io/port3",
 
   "type": "module",
   "scripts": {
